<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Application-->
    <string name="app_name">Taxometr</string>
    <!--/Application-->

    <!--StartActivity-->
  	<string name="btn_from_text">Откуда</string>
    <string name="btn_to_text">Куда</string>
    <string name="btn_route_text">Расчитать стоимость</string>
    <!--/StartActivity-->

    <!-- SelectAddressActivity -->
    <string name="btn_my_location">Текущее местоположение</string>
    <string name="btn_map_point">Указать точку на карте</string>
    <string name="btn_accept_adress">Принять</string>
    <string name="dlg_progress">Определяется текущее местоположение&#8230;</string>
    <!--/SelectAddressActivity-->
</resources>
